--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1618,10 +1618,13 @@
     "notifications.page.table.read.bulk.action.label": "Mark as read",
     "notifications.page.table.select.really.all.label": "Select all %s notifications",
     "notifications.page.table.more.button.label": "Show more",
+    "notifications.page.subscription.demand.detail.button.label": "Show subscription request details",
     "notifications.page.subscription.demand.detail.modal.title": "Subscription request details",
     "notifications.page.subscription.demand.detail.modal.raw.button.label": "Show raw data",
     "notifications.page.subscription.demand.detail.summary.label": "Request summary",
     "notifications.page.subscription.demand.reject.detail.modal.title": "Subscription request rejection details",
+    "notifications.page.subscription.demand.reject.detail.button.label": "Show subscription request rejection details",
+    "notifications.page.notification.ariaLabel": "%s by %s, %s",
     "tenant.edit.clientNamePattern.label": "Custom client name pattern",
     "tenant.edit.clientNamePattern.help": "This pattern is used to customize the client name when creating an API key. The string can include dynamic values using the ${my.value} syntax.",
     "tenant.edit.clientNamePattern.help2": "The following values are available:"
