--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -107,6 +107,7 @@
   "notif.api.demand.reject": "Votre souscription à %s - %s pour le plan %s a été refusée",
   "notif.api.demand.accept": "Votre souscription à %s - %s pour le plan %s a été acceptée",
   "notif.api.access": "demande d'accès à %s",
+  "notif.api.transfer": "demande de transfert de propriété de l'API %s",
   "notif.membership.team": "Demande d'adhésion a votre équipe",
   "notif.apikey.deletion": "Votre clé d'API avec l'identifiant client %s pour API %s a été supprimée",
   "api.access.request": "Vous allez envoyer une demande d'accès à l'API %s. Pour quelle équipe voulez-vous envoyer cette demande ?",
@@ -1625,6 +1626,7 @@
   "notifications.page.subscription.demand.reject.detail.modal.title": "Détails du rejet de la demande de souscription",
   "notifications.page.subscription.demand.reject.detail.button.label": "Voir les détails du rejet de la demande de souscription",
   "notifications.page.notification.ariaLabel": "%s par %s, %s",
+  "notifications.page.unread.button.group.aria.label": "Filtrer les notifications lues ou non lues",
   "tenant.edit.clientNamePattern.label": "Modèle de nom de client personnalisé",
   "tenant.edit.clientNamePattern.help": "Ce modèle est utilisé pour personnaliser le nom du client lors de la création d'une clé d'API. La chaîne de caractères peut contenir des valeurs dynamiques en utilisant la syntaxe ${ma.valeur}.",
   "tenant.edit.clientNamePattern.help2": "Les valeurs disponibles sont les suivantes :"
