--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1562,7 +1562,6 @@
     "migration.custom.style.alert.info.4": " However, inline code editing is now handled through the CLI.",
     "migration.custom.style.alert.info.5": "📘 To learn more about the Daikoku CLI, check out the %s",
     "migration.custom.style.alert.hide": "Hide message",
-    "notifications.page.filters.label": "Filters",
     "notifications.page.filters.team.label": {
         "s": "Team",
         "p": "Teams"
@@ -1603,10 +1602,9 @@
     "notifications.page.filters.type.ApiSubscriptionTransferSuccess.label": "Subscription transfer successful",
     "notifications.page.filters.type.CheckoutForSubscription.label": "Subscription payment",
     "notifications.page.filters.all.notifications.label": "All",
-    "notifications.page.filters.unread.notifications.label": "Unread",
+    "notifications.page.filters.unread.notifications.label": "To treat",
     "notifications.page.filters.clear.label": "Reset filters",
     "notifications.page.table.title": "Notifications",
-    "notifications.page.table.description": "Overview of your latest notifications and system updates",
     "notifications.page.table.select.all.label": "Select all",
     "notifications.page.table.selected.count.label": {
         "s": "%s row selected",
@@ -1614,7 +1612,7 @@
     },
     "notifications.page.table.read.bulk.action.label": "Mark as read",
     "notifications.page.table.select.really.all.label": "Select all %s notifications",
-    "notifications.page.table.more.button.label": "Show more",
+    "notifications.page.table.more.button.label": "Show more notifications",
     "notifications.page.subscription.demand.detail.button.label": "Show subscription request details",
     "notifications.page.subscription.demand.detail.modal.title": "Subscription request details",
     "notifications.page.subscription.demand.detail.modal.raw.button.label": "Show raw data",
@@ -1622,5 +1620,9 @@
     "notifications.page.subscription.demand.reject.detail.modal.title": "Subscription request rejection details",
     "notifications.page.subscription.demand.reject.detail.button.label": "Show subscription request rejection details",
     "notifications.page.notification.ariaLabel": "%s by %s, %s",
-    "notifications.page.unread.button.group.aria.label": "Filter read or unread notifications"
+    "notifications.page.unread.button.group.aria.label": "Filter read or unread notifications",
+    "notifications.page.total.label": {
+        "s": "%s notification",
+        "p": "%s notifications"
+    }
 }
