--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1615,10 +1615,10 @@
     "notifications.page.table.more.button.label": "Show more notifications",
     "notifications.page.subscription.demand.detail.button.label": "Show subscription request details",
     "notifications.page.subscription.demand.detail.modal.title": "Subscription request details",
-    "notifications.page.subscription.demand.detail.modal.raw.button.label": "Show raw data",
+    "notifications.page.subscription.demand.detail.modal.raw.button.label": "Show more",
     "notifications.page.subscription.demand.detail.summary.label": "Request summary",
     "notifications.page.subscription.demand.reject.detail.modal.title": "Subscription request rejection details",
-    "notifications.page.subscription.demand.reject.detail.button.label": "Show subscription request rejection details",
+    "notifications.page.subscription.demand.reject.detail.button.label": "Show more",
     "notifications.page.notification.ariaLabel": "%s by %s, %s",
     "notifications.page.unread.button.group.aria.label": "Filter read or unread notifications",
     "notifications.page.total.label": {
