--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -103,13 +103,20 @@
     "Accept": "Accept",
     "Reject": "Reject",
     "from": "from",
-    "notif.api.subscription": "Request subscription to %s for plan %s",
-    "notif.api.demand.reject": "Your request subscription to %s for plan %s has been rejected",
-    "notif.api.demand.accept": "Your request subscription to %s for plan %s has been accepted",
-    "notif.api.access": "Request access to %s",
-    "notif.api.transfer": "request to transfer the ownership of API %s",
-    "notif.membership.team": "membership request to your team",
-    "notif.apikey.deletion": "Your API key with clientId %s for API %s has been deleted",
+    "notif.api.subscription.environment": "New subscription request for the %s environment.",
+    "notif.api.subscription.default": "New subscription request for the %s plan.",
+    "notif.api.demand.reject": "Your subscription request (%s) has been rejected.",
+    "notif.api.demand.accept": "Your subscription request (%s) has been accepted.",
+    "notif.api.access": "An access request to API %s has been made.",
+    "notif.api.transfer": "A request to transfer ownership of API %s has been sent to you.",
+    "notif.apikey.deletion": "Your API key has been deleted.",
+    "notif.apikey.rotation.inprogress": "Your API key rotation has started.",
+    "notif.apikey.rotation.ended": "Your API key rotation was completed successfully.",
+    "notif.apikey.refresh": "A new API key has been automatically generated.",
+    "notif.team.invitation": "You have been invited to join the team %s.",
+    "notif.new.published.post": "A new post has been published about API %s.",
+    "notif.issues": "A new issue has been opened regarding API %s.",
+    "notif.issues.comment": "A new comment has been added to an issue related to you.",
     "api.access.request": "You will send an access request to the API %s. For which team do you want to send the request?",
     "FreeWithoutQuotas": "Free without quotas",
     "FreeWithQuotas": "Free with quotas",
@@ -605,8 +612,6 @@
     "help.apikey.enabled": "If this API key is disabled, any call using it will fail",
     "help.apikey.rotation": "If rotation is enabled then secret will be reset every months",
     "rotation.error.message": "You can't toggle rotation because of plan rotation is forced to enabled",
-    "notif.apikey.rotation.inprogress": "Your API key with clientId %s (%s/%s) begin his rotation. Its clientSecret had been updated.",
-    "notif.apikey.rotation.ended": "Your API key with clientId %s (%s/%s) has ended his rotation.",
     "Rotation period": "Rotation period (hours)",
     "Grace period": "Grace period (hours)",
     "help.apikey.rotation.period": "Period after which the client secret will be automatically changed",
@@ -747,7 +752,6 @@
     "mandatory.metadata.label": "Mandatory metadata (%s)",
     "Additional metadata": "Additional metadata",
     "create.metadata.option.label": "Create option %s",
-    "notif.apikey.refresh": "Your subscription %s (%s/%s) has been refreshed.",
     "Apikey refresh": "API key refresh",
     "Load previous messages": "Load previous messages",
     "Start new conversation": "New conversation",
@@ -829,13 +833,11 @@
     "team_api_post.title": "Title of news",
     "team_api_post.content": "Content",
     "New Published Post": "News published on API",
-    "new.published.post.notification": "%s, as admin of %s, has published a new post on %s.",
     "nav.section.news.label": "Annoucements",
     "News": "News",
     "deleted": "deleted",
     "Deleted API": "Deleted API",
     "Personal": "Personal",
-    "team.invitation": "%s, as admin of %s, invite you in his team.",
     "initialize_from_otoroshi.confirm": "Are you sure to remove your workspace?",
     "initialize_from_otoroshi.api_keys_imported": "These API keys will be import",
     "initialize_from_otoroshi.api_keys_of": "Otoroshi API keys of",
@@ -873,8 +875,6 @@
     "2fa.qrcode": "Generated QR Code",
     "2fa.confirm": "Confirm",
     "Version used": "Version used",
-    "issues.notification": "An issue has been open on %s",
-    "issues.comment.notification": "An issue has been commented on %s",
     "issues": "Issues",
     "issues.tags": "Tags",
     "issues.no_tags": "No tags",
@@ -1616,13 +1616,16 @@
     "notifications.page.subscription.demand.detail.button.label": "Show subscription request details",
     "notifications.page.subscription.demand.detail.modal.title": "Subscription request details",
     "notifications.page.subscription.demand.detail.modal.raw.button.label": "Show more",
-    "notifications.page.subscription.demand.detail.summary.label": "Request summary",
     "notifications.page.subscription.demand.reject.detail.modal.title": "Subscription request rejection details",
     "notifications.page.subscription.demand.reject.detail.button.label": "Show more",
+    "notifications.page.subscription.deletion.detail.modal.title": "Subscription deletion details",
     "notifications.page.notification.ariaLabel": "%s by %s, %s",
     "notifications.page.unread.button.group.aria.label": "Filter read or unread notifications",
     "notifications.page.total.label": {
         "s": "%s notification",
         "p": "%s notifications"
-    }
+    },
+    "notification.page.status.accepted.label": "Accepted",
+    "notification.page.status.pending.label": "Pending",
+    "notification.page.status.rejected.label": "Rejected"
 }
