--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -103,13 +103,20 @@
   "Accept": "Accepter",
   "Reject": "Rejeter",
   "from": "depuis",
-  "notif.api.subscription": "Souscription à %s - %s pour le plan %s",
-  "notif.api.demand.reject": "Votre souscription à %s - %s pour le plan %s a été refusée",
-  "notif.api.demand.accept": "Votre souscription à %s - %s pour le plan %s a été acceptée",
-  "notif.api.access": "demande d'accès à %s",
-  "notif.api.transfer": "demande de transfert de propriété de l'API %s",
-  "notif.membership.team": "Demande d'adhésion a votre équipe",
-  "notif.apikey.deletion": "Votre clé d'API avec l'identifiant client %s pour API %s a été supprimée",
+  "notif.api.subscription.environment": "Nouvelle demande de souscription pour l'environnement %s.",
+  "notif.api.subscription.default": "Nouvelle demande de souscription pour le plan %s.",
+  "notif.api.demand.reject": "Votre demande de souscription (%s) a été refusée.",
+  "notif.api.demand.accept": "Votre demande de souscription (%s) a été acceptée.",
+  "notif.api.access": "Une demande d'accès à l'API %s a été effectuée.",
+  "notif.api.transfer": "Une demande de transfert de propriété de l'API %s vous a été adressée.",
+  "notif.apikey.deletion": "Votre clé d'API a été supprimée.",
+  "notif.apikey.rotation.inprogress": "Votre clé d'API a débuté sa rotation.",
+  "notif.apikey.rotation.ended": "La rotation de la clé d'API s'est terminée avec succès.",
+  "notif.apikey.refresh": "Une nouvelle clé a été générée automatiquement.",
+  "notif.team.invitation": "Vous avez été invité•e à rejoindre l'équipe %s.",
+  "notif.new.published.post": "Une nouvelle publication a été publié concernant l'API %s",
+  "notif.issues": "Une nouvelle issue a été ouverte concernant l'API %s",
+  "notif.issues.comment": "Un nouveau commentaire a été ajouté à une issue vous concernant.",
   "api.access.request": "Vous allez envoyer une demande d'accès à l'API %s. Pour quelle équipe voulez-vous envoyer cette demande ?",
   "FreeWithoutQuotas": "Gratuit sans quotas",
   "FreeWithQuotas": "Gratuit avec quotas",
@@ -605,8 +612,6 @@
   "help.apikey.enabled": "Si la clé d'API est désactivée, tout appel effectué avec elle échouera",
   "help.apikey.rotation": "Si la rotation de secret est activée, celui-ci sera renouvelé tous les mois",
   "rotation.error.message": "Vous ne pouvez pas activer/désactiver la rotation automatique de la clé d'API car le plan force celle-ci.",
-  "notif.apikey.rotation.inprogress": "Votre clé d'API avec le clientId %s a débuté sa rotation. Son clientSecret a été modifié.",
-  "notif.apikey.rotation.ended": "Votre clé d'API avec le clientId %s a terminé sa rotation.",
   "Rotation period": "Période de rotation (heures)",
   "Grace period": "Période de tuilage (heures)",
   "help.apikey.rotation.period": "Période après laquelle le secret sera automatiquement modifié",
@@ -747,7 +752,6 @@
   "mandatory.metadata.label": "Métadonnées obligatoires (%s)",
   "Additional metadata": "Métadonnées additionnelles",
   "create.metadata.option.label": "Créer l'option %s",
-  "notif.apikey.refresh": "votre souscription %s (%s/%s) a été mise à jour.",
   "Apikey refresh": "Mise à jour d'une clé d'API",
   "Load previous messages": "Messages précédents",
   "Start new conversation": "Nouvelle conversation",
@@ -829,13 +833,11 @@
   "team_api_post.title": "Titre de la publication",
   "team_api_post.content": "Contenu",
   "New Published Post": "Une nouvelle publication a été publiée",
-  "new.published.post.notification": "%s, admin. de l'équipe %s, a posté une nouvelle publication à propos de l'api %s.",
   "nav.section.news.label": "Actualités",
   "News": "Actualités",
   "deleted": "supprimé",
   "Deleted API": "API supprimée",
   "Personal": "Personnel",
-  "team.invitation": "%s, administrateur de %s, vous a invité a rejoindre son équipe.",
   "initialize_from_otoroshi.confirm": "Êtes-vous sûr de vouloir supprimer votre espace de travail ?",
   "initialize_from_otoroshi.api_keys_imported": "Ces clés d'APIs seront importées",
   "initialize_from_otoroshi.api_keys_of": "Clés d'APIs du groupe Otoroshi",
@@ -873,8 +875,6 @@
   "2fa.qrcode": "QR Code généré",
   "2fa.confirm": "Confirmer",
   "Version used": "Version utilisée",
-  "issues.notification": "Une issue a été ouverte sur %s",
-  "issues.comment.notification": "Une issue a été commentée sur %s",
   "issues": "Problèmes",
   "issues.tags": "Étiquettes",
   "issues.no_tags": "Aucune étiquette",
@@ -1616,13 +1616,16 @@
   "notifications.page.subscription.demand.detail.button.label": "Voir les détails de la demande de souscription",
   "notifications.page.subscription.demand.detail.modal.title": "Détails de la demande de souscription",
   "notifications.page.subscription.demand.detail.modal.raw.button.label": "Voir plus",
-  "notifications.page.subscription.demand.detail.summary.label": "Résumé de la demande",
   "notifications.page.subscription.demand.reject.detail.modal.title": "Détails du rejet de la demande de souscription",
   "notifications.page.subscription.demand.reject.detail.button.label": "Voir plus",
+  "notifications.page.subscription.deletion.detail.modal.title": "Détails de la suppression de la souscription",
   "notifications.page.notification.ariaLabel": "%s par %s, %s",
   "notifications.page.unread.button.group.aria.label": "Filtrer les notifications lues ou non lues",
   "notifications.page.total.label": {
     "s": "%s notification",
     "p": "%s notifications"
-  }
+  },
+  "notification.page.status.accepted.label": "Approuvée",
+  "notification.page.status.pending.label": "En cours",
+  "notification.page.status.rejected.label": "Rejetée"
 }
