new Notification with id instead of name of props
new job to purge notifications

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1594,13 +1594,20 @@
     "notifications.page.filters.type.OtoroshiSyncSubscriptionError.label": "Sync error (subscription)",
     "notifications.page.filters.type.OtoroshiSyncApiError.label": "Sync error (API)",
     "notifications.page.filters.type.ApiKeyDeletionInformation.label": "API key deletion",
+    "notifications.page.filters.type.ApiKeyDeletionInformationV2.label": "API key deletion",
     "notifications.page.filters.type.ApiKeyRotationInProgress.label": "API key rotation in progress",
+    "notifications.page.filters.type.ApiKeyRotationInProgressV2.label": "API key rotation in progress",
     "notifications.page.filters.type.ApiKeyRotationEnded.label": "API key rotation completed",
+    "notifications.page.filters.type.ApiKeyRotationEndedV2.label": "API key rotation completed",
     "notifications.page.filters.type.TeamInvitation.label": "Team invitation",
     "notifications.page.filters.type.ApiKeyRefresh.label": "API key refreshed",
+    "notifications.page.filters.type.ApiKeyRefreshV2.label": "API key refreshed",
     "notifications.page.filters.type.NewPostPublished.label": "New post published",
+    "notifications.page.filters.type.NewPostPublishedV2.label": "New post published",
     "notifications.page.filters.type.NewIssueOpen.label": "New issue opened",
+    "notifications.page.filters.type.NewIssueOpenV2.label": "New issue opened",
     "notifications.page.filters.type.NewCommentOnIssue.label": "New comment",
+    "notifications.page.filters.type.NewCommentOnIssueV2.label": "New comment",
     "notifications.page.filters.type.TransferApiOwnership.label": "API ownership transfer",
     "notifications.page.filters.type.ApiSubscriptionTransferSuccess.label": "Subscription transfer successful",
     "notifications.page.filters.type.CheckoutForSubscription.label": "Subscription payment",
