--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1594,13 +1594,20 @@
   "notifications.page.filters.type.OtoroshiSyncSubscriptionError.label": "Erreur de synchro (souscription)",
   "notifications.page.filters.type.OtoroshiSyncApiError.label": "Erreur de synchro (API)",
   "notifications.page.filters.type.ApiKeyDeletionInformation.label": "Suppression de clé d'API",
+  "notifications.page.filters.type.ApiKeyDeletionInformationV2.label": "Suppression de clé d'API",
   "notifications.page.filters.type.ApiKeyRotationInProgress.label": "Rotation de clé en cours",
+  "notifications.page.filters.type.ApiKeyRotationInProgressV2.label": "Rotation de clé en cours",
   "notifications.page.filters.type.ApiKeyRotationEnded.label": "Rotation de clé terminée",
+  "notifications.page.filters.type.ApiKeyRotationEndedV2.label": "Rotation de clé terminée",
   "notifications.page.filters.type.TeamInvitation.label": "Invitation dans une équipe",
   "notifications.page.filters.type.ApiKeyRefresh.label": "Clé API rafraîchie",
+  "notifications.page.filters.type.ApiKeyRefreshV2.label": "Clé API rafraîchie",
   "notifications.page.filters.type.NewPostPublished.label": "Nouveau post publié",
+  "notifications.page.filters.type.NewPostPublishedV2.label": "Nouveau post publié",
   "notifications.page.filters.type.NewIssueOpen.label": "Nouvelle issue",
+  "notifications.page.filters.type.NewIssueOpenV2.label": "Nouvelle issue",
   "notifications.page.filters.type.NewCommentOnIssue.label": "Nouveau commentaire",
+  "notifications.page.filters.type.NewCommentOnIssueV2.label": "Nouveau commentaire",
   "notifications.page.filters.type.TransferApiOwnership.label": "Transfert de propriété d'API",
   "notifications.page.filters.type.ApiSubscriptionTransferSuccess.label": "Transfert de souscription réussi",
   "notifications.page.filters.type.CheckoutForSubscription.label": "Paiement pour souscription",
